tests/baselines/reference/indexSignatureWithInitializer.errors.txt
==== tests/cases/compiler/indexSignatureWithInitializer.ts (4 errors) ====
    interface I {
        [x = '']: string;
         ~
!!! error TS1020: An index signature parameter cannot have an initializer.
         ~~~~~~
!!! error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
    }
    
    class C {
        [x = 0]: string
         ~
!!! error TS1020: An index signature parameter cannot have an initializer.
         ~~~~~
!!! error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
    }